# agentic-app-quickstart-w1

./: .dockerignore  .gitignore  Dockerfile  MCP_README.md  MIGRATION_SUMMARY.md  README.md  docker-compose.yml  multi_agent_unified.Dockerfile  pyproject.toml  test_setup.sh
agentic_app_quickstart/examples/code/: 02_function_calling.py  03_simple_memory.py  04_guardrails.py  05_handoffs.py
agentic_app_quickstart/week_1/solution/: README.md  custom_agents.py  main.py  tools.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: gradio_app.py
backend/src/agent/: multi_agent_mcp.py  utils.py
backend/src/api/: main.py
backend/src/llm/: gemini.py  gemini_model.py  model.py
cert-generator/: Dockerfile  generate-certs.sh
cert-generator/certs/: agentic-app.crt  agentic-app.csr  agentic-app.key  ca.crt  ca.key  ca.srl  nginx-proxy.crt  nginx-proxy.csr  nginx-proxy.key
mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_server/src/api/: server.py
mcp_server/src/security/: analyzer.py  pipeline.py  restricted_executor.py  serialization.py
multi_agent_data_app/: custom_agents.py  custom_agents.py.corrupted  custom_agents_clean.py  main.py  mcp_client.py  mcp_tools.py  tools.py
multi_agent_data_app_unified/: README.md  pyproject.toml
nginx/: Dockerfile  nginx-proxy.conf
trajectory_evaluator/: Dockerfile  README.md  config.py  evaluation_prompts.py  main.py  requirements.txt  trajectory_analyzer.py  utils.py
