[project]
name = "agentic-app-backend"
version = "0.1.0" 
description = "Agentic Application Backend using OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.62.2",
    "openai-agents>=0.2.9",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "gradio>=5.15.0",
    "openinference-instrumentation-openai>=0.1.31",
    "openinference-instrumentation-openai-agents>=0.1.0",
    "openai-agents>=0.2.4",
    "arize-phoenix[evals]>=5.8.0",
    "sqlalchemy>=2.0.0",
    "polars>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
