[project]
name = "multi-agent-unified"
version = "0.1.0" 
description = "Unified Multi-Agent Data Analysis System with MCP Integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core AI/ML packages
    "openai>=1.62.2",
    "openai-agents>=0.2.9",
    
    # Data processing
    "polars>=1.17.1",
    "pandas>=2.2.3",
    "numpy>=1.24.0",
    
    # Visualization
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "plotly>=5.24.1",
    
    # Web interface
    "gradio>=5.15.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    
    # MCP integration
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    
    # Monitoring and tracing
    "openinference-instrumentation-openai>=0.1.31",
    "arize-phoenix[evals]>=5.8.0",
    "openinference-instrumentation-openai-agents>=0.1.0",
    "openai-agents>=0.2.4",

    # Utilities
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.5",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
